<resources>

    <string name="app_name">MazeRunner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Maze Runner</string>
    <string name="Game">Start Game</string>
    <string name="Score">Score</string>
    <string name="Achievements">Achievements</string>
    <string name="Exit">Exit</string>
    <string name="Stats">Stats</string>
    <string name="Store">Store</string>
    <string name="highScore">Highest score:    </string>
    <string name="mostCoins">Most Coins:    </string>
    <string name="highestDistance">Highest Distance:    </string>
    <string name="totalGames">Total games:    </string>
    <string name="totalDistance">Total distance:    </string>
    <string name="totalCoins">Total coins:    </string>
    <string name="bonus">Bonus:    </string>
    <string name="instrctions">How to play:\n\nNavigate through the maze using the ball on the leftmost side of the screen.\nThe ball is controlled via touch and drag.\n In this game, the maze rapidly moves while the difficulty continuously fluctuates.\nCoins are collected so that items can be purchased in the game\'s store.\n\nPower ups are scattered throughout the maze to improve your chances of getting a good score.</string> 
    <string name="instrctions_title">Maze Runner</string>

</resources>