<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/statsbg" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/statsBonusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bonus"
                android:textSize="20dp"
                android:textColor="@android:color/holo_green_light" />
		
			<TextView
			    android:paddingTop="10dp"
                android:id="@+id/highestScoreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highScore"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/mostCoinsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostCoins"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/highestDistanceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highestDistance"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/totalGamesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalGames"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/totalDistanceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalDistance"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/totalCoinsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCoins"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15dp" />
        </LinearLayout>

</RelativeLayout>